--- a/index.html
+++ b/index.html
@@ -12,61 +12,22 @@
 <body>
 <div data-role="page" class="type-home">
 	<div data-role="content">
-		<p id="jqm-version">1.1.0 Final Release</p>
-
-
-		<div class="content-secondary">
-
-			<div id="jqm-homeheader">
-				<h1 id="jqm-logo"><img src="docs/_assets/images/jquery-logo.png" alt="jQuery Mobile Framework" /></h1>
-				<p>A Touch-Optimized UI Framework built with jQuery and HTML5.</p>
-			</div>
-
-
-			<p class="intro"><strong>Welcome.</strong> jQuery Mobile is the easiest way to build sites and apps that are accessible on all popular smartphone, tablet and desktop devices. For jQuery 1.6.4 and 1.7.1.</p>
-
-			<ul data-role="listview" data-inset="true" data-theme="c" data-dividertheme="f">
-				<li data-role="list-divider">Overview</li>
-				<li><a href="docs/about/intro.html">Intro to jQuery Mobile</a></li>
-				<li><a href="docs/about/getting-started.html">Quick start guide</a></li>
-				<li><a href="docs/about/features.html">Features</a></li>
-				<li><a href="docs/about/accessibility.html">Accessibility</a></li>
-				<li><a href="docs/about/platforms.html">Supported platforms</a></li>
-			</ul>
-
-		</div><!--/content-primary-->
-
+		<p>游戏街：Demo展示</p>
 		<div class="content-primary">
 			<nav>
-
-
 				<ul data-role="listview" data-inset="true" data-theme="c" data-dividertheme="b">
-					<li data-role="list-divider">Components</li>
-					<li><a href="docs/pages/index.html">Pages &amp; dialogs</a></li>
-					<li><a href="docs/toolbars/index.html">Toolbars</a></li>
-					<li><a href="docs/buttons/index.html">Buttons</a></li>
-					<li><a href="docs/content/index.html">Content formatting</a></li>
-					<li><a href="docs/forms/index.html">Form elements</a></li>
-					<li><a href="docs/lists/index.html">List views</a></li>
-
-					<li data-role="list-divider">API</li>
-					<li><a href="docs/api/globalconfig.html">Configuring defaults</a></li>
-					<li><a href="docs/api/events.html">Events</a></li>
-					<li><a href="docs/api/methods.html">Methods &amp; Utilities</a></li>
-					<li><a href="docs/api/data-attributes.html">Data attribute reference</a></li>
-					<li><a href="docs/api/themes.html">Theme framework</a></li>
-
-
+					<li data-role="list-divider">效果展示</li>
+					<li><a href="demo/effect/backgroup1.html">活动背景图</a></li>
+					
+					<li data-role="list-divider">场景展示</li>
+					<li><a href="docs/api/globalconfig.html">故事情节开展</a></li>
 				</ul>
 			</nav>
 		</div>
-
-
-
 	</div>
 
-	<div data-role="footer" class="footer-docs" data-theme="c">
-			<p>&copy; 2011-12 The jQuery Foundation</p>
+	<div data-role="footer" data-theme="c">
+			<p>&copy; 2012-13 游戏街</p>
 	</div>
 
 </div>
