--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<nav>
 				<ul data-role="listview" data-inset="true" data-theme="c" data-dividertheme="b">
 					<li data-role="list-divider">效果展示</li>
-					<li><a href="demo/effect/backgroup1.html">活动背景图</a></li>
+					<li><a href="demo/effect/backgroup1.html" data-ajax="false">活动背景图</a></li>
 					
 					<li data-role="list-divider">场景展示</li>
 					<li><a href="docs/api/globalconfig.html">故事情节开展</a></li>
